# accounting-pipeline-public

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: checklist.md  decisions.md  monthly-workflow.md  onboarding.md  prd.md
input/template/: accounts.example.csv  budget_targets.csv  categories.csv  income_sources.csv  merchant_mappings.csv  profile_settings.csv  reviewed_transactions.csv
profiles/demo-jordan-lee/: README.md
profiles/demo-jordan-lee/config/: accounts.csv  budget_targets.csv  categories.csv  income_sources.csv  merchant_mappings.csv  profile_settings.csv  reviewed_transactions.csv
profiles/demo-jordan-lee/raw/: Bank4101_Activity_20260101_20260331.CSV  Chase4101_Activity_20260101_20260331.CSV  Chase4102_Activity_20260101_20260331.CSV  Chase5101_Activity_20260101_20260331.CSV  VenmoStatement_February_2026.csv  VenmoStatement_January_2026.csv  statement_metadata.csv
scripts/: ingest.py
src/accounting_pipeline/: __init__.py  __main__.py  account_setup.py  cli.py  config.py  main.py  models.py  profile_setup.py  utils.py
src/accounting_pipeline/output/: csv_writer.py  workbook_writer.py
tests/: __init__.py  test_account_setup.py  test_categorization.py  test_csv_parser.py  test_dedupe.py  test_income_transfer_check.py  test_pdf_parser.py  test_profiles.py  test_public_privacy.py  test_reports.py  test_statement_metadata_csv.py  test_transfers.py  test_venmo_enrichment.py  test_workbook_front_matter.py  test_workbook_writer.py
tests/fixtures/: reviewed_transactions.csv
(+13 files in other folders)
